--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,3 +11,32 @@
 .modal {
     height: inherit;
 }
+.overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, .35);
+    width: 100%;
+    height: 120%;
+    z-index: 99;
+    display: none;
+}
+.modal-popup {
+    position: absolute;
+    top: 200px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    display: -webkit-flex;
+    display: -ms-flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 38px 18px 32px 18px;
+    width: 100%;
+    max-width: 632px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.75);
+    z-index: 999;
+    display: none;
+}
