--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -35,8 +35,8 @@
     padding: 38px 18px 32px 18px;
     width: 100%;
     max-width: 632px;
-    background-color: #ffffff;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.75);
     z-index: 999;
     display: none;
+    background-color: #d38a8d;
 }
