--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,7 +7,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 @import '~cropperjs';
-
+body {
+    overflow: visible !important;
+}
 .modal {
     height: inherit;
 }
@@ -15,7 +17,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background: rgba(0, 0, 0, .35);
+    background: rgba(0, 0, 0, .75);
     width: 100%;
     height: 120%;
     z-index: 99;
@@ -35,9 +37,8 @@
     padding: 38px 18px 32px 18px;
     width: 100%;
     max-width: 632px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.75);
     z-index: 999;
     display: none;
-    background-color: #d3d0d0;
+    background-color: #ffffff;
     width: 70%;
 }
